--- a/README
+++ b/README
@@ -12,10 +12,20 @@ DESCRIPTION
 The MkDocs files that compose the AIMWARE.net Knowledge Base.
 
 
+MkDocs INSTALLATION GUIDE
+=======
+- Download [python3](http://https://www.python.org/downloads/ "python3") 
+- Install pip `python -m pip`
+- Install mkdocs `pip install mkdocs`
+- Build project `mkdocs build`
+
+
 SERVING
 =======
 
 For testing, you can serve the generated MkDocs files locally using the PHP
 built-in webserver.
 
-$ php -S localhost:8000 -t public/
+$ php -S localhost:8000 -t public/kb
+
+
