--- a/README
+++ b/README
@@ -12,7 +12,7 @@ DESCRIPTION
 The MkDocs files that compose the AIMWARE.net Knowledge Base.
 
 
-MkDocs INSTALLATION GUIDE
+INSTALL
 =======
 - Download [python3](http://https://www.python.org/downloads/ "python3") 
 - Install pip `python -m pip`
@@ -26,6 +26,6 @@ SERVING
 For testing, you can serve the generated MkDocs files locally using the PHP
 built-in webserver.
 
-$ php -S localhost:8000 -t public/kb
+$ php -S localhost:8000 -t public/
 
 
