--- a/README
+++ b/README
@@ -12,6 +12,24 @@ DESCRIPTION
 The MkDocs files that compose the AIMWARE.net Knowledge Base.
 
 
+REQUIREMENTS
+============
+
+- Python 3
+
+- MkDocs
+$ python -m pip install mkdocs
+
+- MkDocs Material
+$ python -m pip install mkdocs-material
+
+
+BUILD
+=====
+
+$ mkdocs build
+
+
 SERVING
 =======
 
